--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ version = "0.0.1"
 readme = "README.md"
 dependencies = [
     "Flask >= 3.1.0",
-    "dotenv >= 1.0.1"
+    "dotenv >= 1.0.1",
+    "Flask-SQLAlchemy >= 3.1.1"
 ]
