--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 dependencies = [
     "Flask >= 3.1.0",
     "dotenv >= 1.0.1",
-    "Flask-SQLAlchemy >= 3.1.1"
+    "Flask-SQLAlchemy >= 3.1.1",
+    "PyJWT >= 2.10.1"
 ]
